--- a/foto.html
+++ b/foto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenangan Indah Kita - Nur & Musadi</title>
+    <title>Ucapan dan Doa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600;700&family=Sacramento&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -197,17 +197,17 @@
 
     <script>
         const slideshowData = [
-            { sumberGambar: "foto/1.jpg", caption: "Ya Allah, di hari istimewa sahabatku Nud, limpahkanlah ia kebahagiaan & kemudahan dalam setiap langkahnya. Aamiin. 🤲" },
-            { sumberGambar: "foto/2.jpg", caption: "Semoga Engkau selalu menerangi jalannya dengan ilmu yang bermanfaat dan hati yang penuh syukur, Nad. 🎂" },
-            { sumberGambar: "foto/3.jpg", caption: "Ya Rabb, jadikanlah senyumnya sebagai tanda ketenangan hati dan keberkahan hidup. ✨" },
-            { sumberGambar: "foto/4.jpg", caption: "Semoga doa ini sampai kepada-Mu, Ya Allah, untuk kebaikan Nad." }, // Contoh data tanpa gambar valid
-            { sumberGambar: "foto/5.jpg", caption: "Semoga setiap momen dalam hidupnya menjadi ladang pahala dan kebaikan. 🎁" },
-            { sumberGambar: "foto/6.jpg", caption: "Ya Allah, hanya kepada-Mu kami memohon, kabulkanlah doa tulus untuk sahabat kami, Nad. Berikan ia yang terbaik." }, // Contoh data dengan sumberGambar kosong
-            { sumberGambar: "foto/7.jpg", caption: "Kabulkanlah segala doa dan harapan baiknya, mudahkanlah cita-citanya, wahai Dzat Yang Maha Mendengar. 🙏" },
-            { sumberGambar: "foto/8.jpg", caption: "Semoga Engkau berikan ia semangat setinggi langit untuk meraih impian, dan bimbingan di setiap pilihan. 🎈" },
-            { sumberGambar: "foto/9.jpg", caption: "Ya Allah, berkahilah persahabatan kami, jadikanlah ia ikatan yang membawa kebaikan dunia dan akhirat. 🥂" },
-            { sumberGambar: "foto/10.jpg", caption: "Semoga Nad selalu dalam lindungan-Mu, diberikan kesehatan, dan kebahagiaan yang tak terputus. Aamiin ya Rabbal'alamin." }
-        ];
+            { sumberGambar: "foto/1.jpg", caption: "Selamat atas kelulusannya! Semoga Allah SWT melimpahkan kemudahan dan membuka pintu rezeki di setiap langkah awal kariermu. Aamiin. 🎓" },
+            { sumberGambar: "foto/2.jpg", caption: "Semoga ilmu yang telah diraih menjadi bekal berharga dan membawa keberkahan dalam perjalanan mencari kerja. Terus semangat! 💪" },
+            { sumberGambar: "foto/3.jpg", caption: "Ya Rabb, mudahkanlah jalannya menemukan pekerjaan impian yang membawa kebaikan dan kebahagiaan. ✨" },
+            { sumberGambar: "foto/4.jpg", caption: "Selamat ulang tahun! Semoga di usia baru ini, segala usahanya mencari kerja dimudahkan dan segera membuahkan hasil terbaik." },
+            { sumberGambar: "foto/5.jpg", caption: "Teruslah berusaha dan berdoa. Semoga setiap langkahmu dalam mencari kerja menjadi ladang pahala dan pengalaman berharga. 🎁" },
+            { sumberGambar: "foto/6.jpg", caption: "Ya Allah, hanya kepada-Mu kami memohon, kabulkanlah doa tulus untuk sahabat kami ini. Berikan ia pekerjaan yang terbaik menurut-Mu." },
+            { sumberGambar: "foto/7.jpg", caption: "Semoga semangatmu tak pernah padam dalam meraih cita-cita karier. Yakinlah, Allah Maha Mendengar setiap doa dan usaha. 🙏" },
+            { sumberGambar: "foto/8.jpg", caption: "Selamat bertambah usia! Semoga Engkau berikan ia kekuatan dan ketabahan dalam menghadapi tantangan mencari kerja, serta bimbingan di setiap pilihan. 🎈" },
+            { sumberGambar: "foto/9.jpg", caption: "Ya Allah, berkahilah setiap ikhtiarnya. Semoga pintu-pintu kesempatan terbuka lebar untuknya. 🥂" },
+            { sumberGambar: "foto/10.jpg", caption: "Semoga ia selalu dalam lindungan-Mu, diberikan kesehatan, kesabaran, dan segera mendapatkan kabar baik perihal pekerjaan. Aamiin ya Rabbal'alamin." }
+];
 
         const playerA = document.getElementById('player-a');
         const playerB = document.getElementById('player-b');
